--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ body{
 	margin:50px auto;
 	font-size: 18px;
 	color:black;
-	display:flex; 
-	/*flex-wrap: wrap;*/	
+	display:flex; 	
 }
 
 .course{
@@ -27,9 +26,6 @@ body{
 	font-size:22px;
 	color:rgb(255,242,0);
 	text-shadow: 1px 1px 0px rgba(0,0,0,0.6);
-}
-.course .picked{
-	/*min-width:380px;*/
 }
 
 .schedule{	
@@ -63,24 +59,8 @@ body{
 
 .lect_from{
 	color:rgba(80,80,80,0.5);
-	margin:0 5%;/**/
+	margin:0 5%;
 }
-
-/*.lect_about{
-	position:fixed;
-	padding:10px 20px;
-	max-width:400px;
-	border: 1px solid #b3c9ce;
-	border-radius: 4px;
-    text-align: center;
-    font: italic 14px/1.3 arial, sans-serif;
-    color: #333;
-    background: #fff;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, .3);
-}*/
-
-
-
 
 .picked{ width:65%;}
 
